test/testdata/classes/methods/static/init_error.lox
class Foo {
  // error: init() cannot be static
  // lint error: init() cannot be static
  static init() {}
}

_ = Foo;
